--- a/index.html
+++ b/index.html
@@ -137,10 +137,13 @@
           <!--education-->
           <div class="education">
             <h3 class="title">Education</h3>
-            <h4 class="university">
-              <h4 class="work-position">
-                Vasyl Stefanyk Precarpathian National University
-              </h4>
+            <h4 class="work-position">GO IT school education</h4>
+            <h5 class="department">Junior Developer</h5>
+            <p class="period">
+              November 2022 - June 2023 <span class="line">|</span> Ukraine
+            </p>
+            <h4 class="work-position">
+              Vasyl Stefanyk Precarpathian National University
             </h4>
             <h5 class="department">physical education and sports</h5>
             <p class="period">
@@ -199,7 +202,7 @@
         </div>
         <!--Tech skills-->
         <div class="tech-skills">
-          <h3 class="sidebar-title">Tech skills</h3>
+          <h3 class="sidebar-title">Hard skills</h3>
           <ul class="tech-skills-list">
             <li class="tech-skills-item">
               <span class="tech-skills-text">HTML5</span>
